fix responsiveness on small screens and added some styles

--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,13 @@ img {
   margin: 2rem auto;
 }
 
+@media (max-width: 560px) {
+  .container {
+    width: auto;
+    margin: auto;
+  }
+}
+
 /* Navbar Styles */
 .navbar {
   padding: 1rem;
@@ -209,6 +216,20 @@ img {
 @media (max-width: 560px) {
   .listitem {
     width: 190px;
+    margin: 1rem auto;
+  }
+}
+
+@media (max-width: 480px) {
+  .listitem {
+    width: 160px;
+  }
+}
+
+@media (max-width: 300px) {
+  .listitem {
+    width: 230px;
+    margin: 1rem auto;
   }
 }
 
@@ -246,8 +267,18 @@ img {
 }
 
 @media (max-width: 560px) {
+  .homepage__title {
+    text-align: center;
+  }
+
   .homepage__list {
     grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 300px) {
+  .homepage__list {
+    grid-template-columns: 1fr;
   }
 }
 
@@ -385,6 +416,12 @@ img {
   }
 }
 
+@media (max-width: 560px) {
+  .about__info {
+    width: auto;
+  }
+}
+
 /* Footer Styles */
 
 .footer {
@@ -395,6 +432,7 @@ img {
   height: 100px;
   background: var(--offwhite);
   width: 100%;
+  margin-top: 1rem;
 }
 
 .footer > h3 {
@@ -410,4 +448,8 @@ img {
 .footer__links > a {
   margin: 0.5rem;
   color: var(--dark-gray);
+}
+
+.footer__links > a:hover {
+  color: var(--secondary-color);
 }
